[gd_scene load_steps=4 format=3 uid="uid://bacdcen36mjue"]

[ext_resource type="PackedScene" uid="uid://866atwbjrgoa" path="res://src/ui_components/player_list/player_list_view/player_list_row/player_list_row.tscn" id="1_7edpw"]
[ext_resource type="Script" uid="uid://blxna33nnruf0" path="res://src/ui_components/player_list/player_list_view/views/contract/player_list_row_contract.gd" id="2_lofeb"]
[ext_resource type="PackedScene" uid="uid://b3y6tq2i5pg3b" path="res://src/ui_components/base/color_label/color_label.tscn" id="3_e2fe0"]

[node name="PlayerListRowContract" instance=ExtResource("1_7edpw")]
script = ExtResource("2_lofeb")

[node name="Income" parent="Items" index="1" instance=ExtResource("3_e2fe0")]
unique_name_in_owner = true
custom_minimum_size = Vector2(94, 0)
layout_mode = 2
text = "20"
text_overrun_behavior = 1

[node name="IsOnLoan" parent="Items" index="2" instance=ExtResource("3_e2fe0")]
unique_name_in_owner = true
custom_minimum_size = Vector2(94, 0)
layout_mode = 2
text = "20"
text_overrun_behavior = 1

[node name="EndDate" parent="Items" index="3" instance=ExtResource("3_e2fe0")]
unique_name_in_owner = true
custom_minimum_size = Vector2(94, 0)
layout_mode = 2
text = "20"
text_overrun_behavior = 1

[node name="StartDate" parent="Items" index="4" instance=ExtResource("3_e2fe0")]
unique_name_in_owner = true
custom_minimum_size = Vector2(94, 0)
layout_mode = 2
text = "20"
text_overrun_behavior = 1

[node name="BuyClause" parent="Items" index="5" instance=ExtResource("3_e2fe0")]
unique_name_in_owner = true
custom_minimum_size = Vector2(94, 0)
layout_mode = 2
text = "20"
text_overrun_behavior = 1
